--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
     <title>TODO LIST</title>
 </head>
 <body>
+    <!-- container -->
+    <div class="container">
+        <div class="sub-container">
+            <div class="title-container">
+                
+            </div>
+        </div>
+    </div>
     
     <script src="js/script.js"></script>
 </body>
