--- a/index.html
+++ b/index.html
@@ -24,6 +24,30 @@
                 <h1>UX Foundamental Sharing</h1>
                 <p>Data</p>
             </header>
+
+            <!-- main -->
+            <main>
+                <!-- add-list -->
+                <div class="add-list">
+                    <input type="text" placeholder="Inserisci qui la tua nota">
+                    <i class="fa-solid fa-circle-plus"></i>
+                </div>
+                <!-- list -->
+                <div class="list">
+                    <ul>
+                        <li>
+                            <h3>intro</h3>
+                            <h2>testo generico</h2>
+                            <p>testo testo</p>
+                        </li>
+                        <li>
+                            <h3>intro</h3>
+                            <h2>testo generico</h2>
+                            <p>testo testo</p>
+                        </li>
+                    </ul>
+                </div>
+            </main>
         </div>
     </div>
     
