--- a/index.html
+++ b/index.html
@@ -36,14 +36,14 @@
                 <div class="list">
                     <ul>
                         <li>
-                            <h3>intro</h3>
-                            <h2>testo generico</h2>
-                            <p>testo testo</p>
-                        </li>
-                        <li>
-                            <h3>intro</h3>
-                            <h2>testo generico</h2>
-                            <p>testo testo</p>
+                            <div class="text-todo">
+                                <h3>intro</h3>
+                                <h2>testo generico</h2>
+                                <p>testo testo</p>
+                            </div>
+                            <div class="delete">
+                                <i class="fa-solid fa-circle-xmark"></i>
+                            </div>
                         </li>
                     </ul>
                 </div>
